# pytopomap

./: .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest_requirements.txt
.github/workflows/: changelog.yml  publish_to_pypi.yml
data/: h_deposits.tif  z.tif
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  pytopomap.rst  requirements.txt  sg_execution_times.rst  test_import_res.rst
docs/source/auto_gallery/: index.rst  plot_exemple_data.codeobj.json  plot_exemple_data.ipynb  plot_exemple_data.py  plot_exemple_data.py.md5  plot_exemple_data.rst  plot_exemple_data_on_topo.codeobj.json  plot_exemple_data_on_topo.ipynb  plot_exemple_data_on_topo.py.md5  plot_exemple_data_on_topo.rst  plot_exemple_topo.codeobj.json  plot_exemple_topo.ipynb  plot_exemple_topo.py  plot_exemple_topo.py.md5  plot_exemple_topo.rst  sg_execution_times.rst
examples/: GALLERY_HEADER.rst  plot_example_3d_data.py  plot_example_3d_data_on_topo.py  plot_example_3d_topo.py  plot_example_data.py  plot_example_data_on_topo.py  plot_example_data_on_topo_3d.py  plot_example_topo.py  plot_example_topo_3d.py  plot_exemple_topo.py
src/pytopomap/: plot.py  plot_3d.py  tools.py
tests/: test_data_topo.py  test_imshow.py  test_maps.py  test_topo.py
