# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytopomap"
version = "v1.0.0"
description = "Topographic visualization tools"
readme = "README.md"
authors = [{ name = "Marc Peruzzetto", email = "m.peruzzetto@brgm.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["topography", "display"]
dependencies = [
    "seaborn", "requests", "scipy"
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest"]
dev = ["pipreqs"]
gis = ["rasterio", "shapely"]

[tools.setuptools]
packages = ["src"]

[project.urls]
Homepage = "https://github.com/marcperuz/pytopomap"

[tool.pytest.ini_options]
pythonpath = ["src"]
